K8s/homelab/applications/utilities/stirling-pdf-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pdf-route
  namespace: utilities
spec:
  parentRefs:
  - name: cilium-gw
    namespace: gateway
    group: gateway.networking.k8s.io	
    kind: Gateway
  hostnames:
  - "pdf.k8s.z3cyber.tech"
  rules:
   - backendRefs:
      - name: stirling-pdf
        port: 8080
        group: ''	
        kind: Service
        weight: 1	
     matches:	
        - path:	
            type: PathPrefix	
            value: /
